--- a/easy_check.html
+++ b/easy_check.html
@@ -6,21 +6,21 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" type="image/png" href="assets/easy-check.png">
+        <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link id="theme" rel="stylesheet" href="static/light.css">
         <meta name="description" content="Easily make a to-do list with Easy Check." />
         <meta name="author" content="G8torx" />
         <title>Easy Check</title>
     </head>
-    <body class="easy-bg-2" onload="load();">
+    <body class="list-bg" onload="load(); loadTitle();">
         <section>
-            <div class="easy-check-bg">
+            <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
+            <div>
                 <div class="container">
-                    <h1>Easy Check</h1>
+                    <input type="text" class="title" id="title" placeholder="Title...">
                     <div id="myDIV" class="header">
-                        <h2 style="margin:10px">My To Do List</h2>
-                        <input type="text" id="myInput" placeholder="To Do...">
+                        <input type="text" class="listInput" id="myInput" placeholder="To Do...">
                         <a target="_blank" onclick="newElement();" id="addButton" class="addBtn" style="text-decoration: none;">
                             <i class="fa-solid fa-plus"></i>
                         </a>
@@ -33,5 +33,5 @@
             </div>
         </section>
     </body>
-    <script src="scripts.js"></script>
+    <script src="static/scripts.js"></script>
 </html>
