--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="static/light.css">
         <link rel="shortcut icon" type="image/png" href="assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Easily make a to-do list with Easy Check." />
