--- a/easy_check.html
+++ b/easy_check.html
@@ -28,9 +28,9 @@
                             <div class="dropdown">
                                 <button class="optionsBtn"><i class="fa-solid fa-bars"></i></button>
                                 <div class="dropdown-content">
-                                  <a href="#">Link 1</a>
-                                  <a href="#">Link 2</a>
-                                  <a href="#">Link 3</a>
+                                  <a href="#">None</a>
+                                  <a href="#">None</a>
+                                  <a href="#">None</a>
                                 </div>
                               </div>
                         </div>
