--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,14 @@
         <meta name="author" content="G8torx" />
         <title>Easy Check</title>
     </head>
-    <body class="dark-bg" onload="loadTheme();">
+    <body onload="loadTheme();" class="dark-bg">
         <section class="container">
-            <a href="index" class="button selectedButton">Home</a>
+            <a href="index" class="button">Home</a>
             <a href="about" class="button">About</a>
             <a href="list" class="button">Product</a>
-            <a href="contact" class="button">Contact</a>
+            <a href="contact" class="button selectedButton">Contact</a>
             <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
-            <h1 class="home-title">Easy Check</h1>
-            <h3 class="beta-text">Beta</h3>
+            <h1 style="position: relative; top: 20px;">Contact</h1>
             <div class="bottom-wave">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
@@ -29,7 +28,15 @@
                     <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
                 </svg>
             </div>
-        </section>
+            <form action="https://formsubmit.co/g8tor.dev@gmail.com" class="contact" method="POST">
+                <input type="hidden" name="_subject" value="New e-mail!">
+                <input type="text" name="name" class="name-input" placeholder="Name..." required>
+                <input type="email" class="email-input" name="email" placeholder="example@gmail.com" required>
+                <textarea class="message-input" name="message" rows="10" placeholder="Message here..." required></textarea>
+                <input type="hidden" name="_captcha" value="false">
+                <button class="send-button" id="send-button" onclick="sendingMessage();" type="submit">Send</button>
+           </form>
+        </section> 
     </body>
     <script src="static/scripts.js"></script>
 </html>
