--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
     </head>
     <body class="dark-bg" onload="loadTheme();">
         <section class="container">
-            <a href="index" class="button selectedButton">Home</a>
-            <a href="about" class="button">About</a>
+            <a href="index" class="button">Home</a>
+            <a href="about" class="button selectedButton">About</a>
             <a href="list" class="button">Product</a>
             <a href="contact" class="button">Contact</a>
             <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
-            <h1 class="home-title">Easy Check</h1>
-            <h3 class="beta-text">Beta</h3>
+            <h1 style="position: relative; top: 20px;">About</h1>
+            <p style="text-align: center;">Easy Check Beta is the first launch of Easy Check. With the beta version people can make their own check lists, add a priority to an item, edit one of the items if they spelled something wrong, and also delete items. In the future, we are looking to expand and add more features to Easy Check. We are planing to use remote storage versus local storage, letting the user make multiple different list instead of just having one, and making the website mobile friendly. If you have an ideas or suggestions, please contact us!</p>
             <div class="bottom-wave">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
