--- a/list.html
+++ b/list.html
@@ -5,6 +5,7 @@
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=M PLUS Rounded 1c" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +14,15 @@
         <meta name="author" content="G8torx" />
         <title>Easy Check</title>
     </head>
-    <body class="list-bg" onload="loadList(); loadTitle(); loadTheme();">
+    <body class="list-bg" onload="loadList(); loadTitle(); loadTheme(); loadPriority();">
         <section>
-            <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
+            <div class="container">
+                <a href="index" class="button">Home</a>
+                <a href="about" class="button">About</a>
+                <a href="list" class="button selectedButton">Product</a>
+                <a href="contact" class="button">Contact</a>
+                <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
+            </div>
             <div>
                 <div class="container">
                     <input type="text" class="title" id="title" placeholder="Title...">
@@ -25,14 +32,13 @@
                             <span target="_blank" onclick="newElement();" id="addButton" class="addBtn" style="text-decoration: none;">
                                 <i class="fa-solid fa-plus"></i>
                             </span>
-                            <div class="dropdown">
-                                <button class="optionsBtn"><i class="fa-solid fa-bars"></i></button>
-                                <div class="dropdown-content">
-                                  <a href="#">None</a>
-                                  <a href="#">None</a>
-                                  <a href="#">None</a>
-                                </div>
-                              </div>
+                            <select class="optionsBtn" onclick="sortPriority();" id="options">
+                                <option value="" disabled selected hidden>Show priority:</option>
+                                <option value="all">All</option>
+                                <option value="low">Low</option>
+                                <option value="medium">Medium</option>
+                                <option value="high">High</option>
+                            </select>
                         </div>
                         <div class="list">
                             <ul id="myUL">
