--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
             <div class="aboutSection">
                 <h1 style="position: relative; top: 20px;">About</h1>
-                <p class="aboutText">Easy Check Beta is the first launch of Easy Check. You might be wondering what beta means? Beta means that Easy Check is in the final stages of development and is still being worked on. With the beta version people can make their own check lists, add a priority to an item, edit one of the items if they spelled something wrong, and also delete items.</p>
+                <p class="aboutText">Easy Check Beta is the first launch of Easy Check. You might be wondering what beta means? Beta means that Easy Check is in the middle to final stages of development and is still being worked on. With the beta version people can make their own check lists, add a priority to an item, edit one of the items if they spelled something wrong, and also delete items.</p>
                 <p class="aboutText" style="position: relative; top: 1rem">In the future, we are looking to expand and add more features to Easy Check. We are planing to use remote storage versus local storage, letting the user make multiple different list instead of just having one, and making the website mobile friendly. If you have an ideas or suggestions, please contact us!</p>
             </div>
             <div class="bottom-wave">
