--- a/list.html
+++ b/list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Font Awesome icons (free version)-->
+        <!-- Font Awesome icons (free version) -->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
+        <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=M PLUS Rounded 1c" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -25,10 +25,18 @@
             </div>
             <div>
                 <div class="container">
-                    <input type="text" class="title" id="title" placeholder="Title...">
+                    <input type="text" class="title" id="title" placeholder="Homework">
                     <div id="myDIV" class="header">
                         <input type="text" class="listInput" id="myInput" placeholder="To Do...">
                         <div>
+                            <!-- Add the new Class dropdown -->
+                            <select class="classBtn" id="classOptions">
+                                <option value="" disabled selected hidden>Select class:</option>
+                                <option value="spanish">Spanish</option>
+                                <option value="english">English</option>
+                                <option value="math">Math</option>
+                                <option value="history">History</option>
+                            </select>
                             <span target="_blank" onclick="newElement();" id="addButton" class="addBtn" style="text-decoration: none;">
                                 <i class="fa-solid fa-plus"></i>
                             </span>
@@ -41,8 +49,7 @@
                             </select>
                         </div>
                         <div class="list">
-                            <ul id="myUL">
-                            </ul>
+                            <ul id="myUL"></ul>
                         </div>
                     </div>                      
                 </div>
