--- a/list.html
+++ b/list.html
@@ -35,9 +35,9 @@
                             <select class="optionsBtn" onclick="sortPriority();" id="options">
                                 <option value="" disabled selected hidden>Show priority:</option>
                                 <option value="all">All</option>
-                                <option value="low">Low</option>
-                                <option value="medium">Medium</option>
-                                <option value="high">High</option>
+                                <option value="english">English</option>
+                                <option value="history">History</option>
+                                <option value="math">Math</option>
                             </select>
                         </div>
                         <div class="list">
