--- a/list.html
+++ b/list.html
@@ -33,14 +33,11 @@
                                 <i class="fa-solid fa-plus"></i>
                             </span>
                             <select class="optionsBtn" onclick="sortPriority();" id="options">
-                                <option value="" disabled selected hidden>Show Class</option>
+                                <option value="" disabled selected hidden>Show priority:</option>
                                 <option value="all">All</option>
-                                <option value="english">English</option>
-                                <option value="math">Math</option>
-                                <option value="history">History</option>
-                                <option value="environmental">Environmental</option>
-                                <option value="sacraments">Sacraments</option>
-                                <option value="spanish">Spanish</option>
+                                <option value="low">Low</option>
+                                <option value="medium">Medium</option>
+                                <option value="high">High</option>
                             </select>
                         </div>
                         <div class="list">
