--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
         <link id="theme" rel="stylesheet" href="static/light.css">
         <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Easily make a to-do list with Easy Check." />
+        <meta name="description" content="Easily make a to-do list with Cura." />
         <meta name="author" content="G8torx" />
-        <title>Easy Check</title>
+        <title>Cura</title>
     </head>
     <body class="dark-bg" onload="loadTheme();">
         <section class="container">
@@ -22,8 +22,8 @@
             <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
             <div class="aboutSection">
                 <h1 style="position: relative; top: 20px;">About</h1>
-                <p class="aboutText">Easy Check Beta is the first launch of Easy Check. You might be wondering what beta means? Beta means that Easy Check is in the final stages of development and is still being worked on. With the beta version people can make their own check lists, add a priority to an item, edit one of the items if they spelled something wrong, and also delete items.</p>
-                <p class="aboutText" style="position: relative; top: 1rem">In the future, we are looking to expand and add more features to Easy Check. We are planing to use remote storage versus local storage, letting the user make multiple different list instead of just having one, and making the website mobile friendly. If you have an ideas or suggestions, please contact us!</p>
+                <p class="aboutText">Cura Beta is the first launch of Cura. You might be wondering what beta means? Beta means that Cura is in the final stages of development and is still being worked on. With the beta version people can make their own check lists, add a priority to an item, edit one of the items if they spelled something wrong, and also delete items.</p>
+                <p class="aboutText" style="position: relative; top: 1rem">In the future, we are looking to expand and add more features to Cura. We are planing to use remote storage versus local storage, letting the user make multiple different list instead of just having one, and making the website mobile friendly. If you have an ideas or suggestions, please contact us!</p>
             </div>
             <div class="bottom-wave">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
