--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
         <link id="theme" rel="stylesheet" href="static/light.css">
         <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Easily make a to-do list with Easy Check." />
+        <meta name="description" content="Easily make a to-do list with Cura." />
         <meta name="author" content="G8torx" />
-        <title>Easy Check</title>
+        <title>Cura</title>
     </head>
     <body onload="loadTheme();" class="dark-bg">
         <section class="container">
