--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <link id="theme" rel="stylesheet" href="static/light.css">
         <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Easily make a to-do list with Easy Check." />
+        <meta name="description" content="Easily make a to-do list with Cura." />
         <meta name="author" content="G8torx" />
-        <title>Easy Check</title>
+        <title>Cura</title>
     </head>
     <body class="dark-bg" onload="loadTheme();">
         <section class="container">
@@ -20,8 +20,8 @@
             <a href="list" class="button">Product</a>
             <a href="contact" class="button">Contact</a>
             <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
-            <h1 class="home-title">Easy Check</h1>
-            <h3 class="beta-text">Beta</h3>
+            <h1 class="home-title">Cura</h1>
+            <!-- <h3 class="beta-text">Beta</h3> -->
             <div class="bottom-wave">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
