--- a/list.html
+++ b/list.html
@@ -10,9 +10,9 @@
         <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link id="theme" rel="stylesheet" href="static/light.css">
-        <meta name="description" content="Easily make a to-do list with Easy Check." />
+        <meta name="description" content="Easily make a to-do list with Cura." />
         <meta name="author" content="G8torx" />
-        <title>Easy Check</title>
+        <title>Cura</title>
     </head>
     <body class="list-bg" onload="loadList(); loadTitle(); loadTheme(); loadPriority();">
         <section>
