--- a/list.html
+++ b/list.html
@@ -14,7 +14,7 @@
         <meta name="author" content="G8torx" />
         <title>Cura</title>
     </head>
-    <body class="dark-bg" onload="loadList(); loadTitle(); loadTheme(); loadPriority();">
+    <body class="dark-bg" onload="loadTheme(); loadList(); loadTitle(); loadPriority();">
         <section>
             <div class="container">
                 <a href="index" class="button">Home</a>
