--- a/list.html
+++ b/list.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=M PLUS Rounded 1c" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link id="theme" rel="stylesheet" href="static/light.css">
-        <meta name="description" content="Easily make a to-do list with Cura." />
-        <meta name="author" content="G8torx" />
-        <title>Cura</title>
-    </head>
-    <body class="dark-bg" onload="loadTheme(); loadList(); loadTitle(); loadPriority();">
-        <section>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Easily make a to-do list with Cura." />
+    <meta name="author" content="G8torx" />
+    <title>Cura</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=M PLUS Rounded 1c" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+
+    <!-- Favicon and Stylesheets -->
+    <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
+    <link rel="stylesheet" href="style.css">
+    <link id="theme" rel="stylesheet" href="static/light.css">
+
+    <!-- Font Awesome Icons -->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+<body class="dark-bg" onload="loadTheme(); loadList(); loadTitle(); loadPriority();">
+    <!-- Intro Section -->
+    <div class="intro">
+        <h1 class="logo-header">
+            <span class="logo">Cu</span><span class="logo">ra.</span>
+        </h1>
+    </div>
+    <header>
+        <h4>Cura.</h4>
+    </header>
+
+    <!-- Navigation and To-Do List Section -->
+    <section>
+        <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">Dark</button>
+        <div>
             <div class="container">
-                <a href="index" class="button">Home</a>
-                <a href="about" class="button">About</a>
-                <a href="list" class="button selectedButton">Product</a>
-                <a href="contact" class="button">Contact</a>
-                <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
+                <input type="text" class="title" id="title" placeholder="Title...">
+                <div id="myDIV" class="header">
+                    <input type="text" class="listInput" id="myInput" placeholder="To Do...">
+                    <div>
+                        <span target="_blank" onclick="newElement();" id="addButton" class="addBtn" style="text-decoration: none;">
+                            <i class="fa-solid fa-plus"></i>
+                        </span>
+                    </div>
+                    <div class="list">
+                        <ul id="myUL"></ul>
+                    </div>
+                </div>                      
             </div>
-            <div>
-                <div class="container">
-                    <input type="text" class="title" id="title" placeholder="Title...">
-                    <div id="myDIV" class="header">
-                        <input type="text" class="listInput" id="myInput" placeholder="To Do...">
-                        <div>
-                            <span target="_blank" onclick="newElement();" id="addButton" class="addBtn" style="text-decoration: none;">
-                                <i class="fa-solid fa-plus"></i>
-                            </span>
-                            <select class="optionsBtn" onclick="sortPriority();" id="options">
-                                <option value="" disabled selected hidden>Show priority:</option>
-                                <option value="all">All</option>
-                                <option value="low">Low</option>
-                                <option value="medium">Medium</option>
-                                <option value="high">High</option>
-                            </select>
-                        </div>
-                        <div class="list">
-                            <ul id="myUL">
-                            </ul>
-                        </div>
-                    </div>                      
-                </div>
-            </div>
-        </section>
-    </body>
+        </div>
+    </section>
+
     <script src="static/scripts.js"></script>
+</body>
 </html>
