--- a/list.html
+++ b/list.html
@@ -15,13 +15,13 @@
 
     <!-- Favicon and Stylesheets -->
     <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
     <link id="theme" rel="stylesheet" href="static/light.css">
 
     <!-- Font Awesome Icons -->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 </head>
-<body class="dark-bg" onload="loadTheme(); loadList(); loadTitle(); loadPriority();">
+<body class="dark-bg" onload="loadTitle(); loadTheme(); loadList(); loadPriority();">
     <!-- Intro Section -->
     <div class="intro">
         <h1 class="logo-header">
