--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <link id="theme" rel="stylesheet" href="static/light.css">
-        <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Easily make a to-do list with Cura." />
-        <meta name="author" content="G8torx" />
-        <title>Cura</title>
-    </head>
-    <body class="dark-bg" onload="loadTheme();">
-        <section class="container">
-            <a href="index" class="button selectedButton">Home</a>
-            <a href="about" class="button">About</a>
-            <a href="list" class="button">Product</a>
-            <a href="contact" class="button">Contact</a>
-            <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">🌓</button>
-            <h1 class="home-title">Cura</h1>
-            <!-- <h3 class="beta-text">Beta</h3> -->
-            <div class="bottom-wave">
-                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
-                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
-                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
-                </svg>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Easily make a to-do list with Cura." />
+    <meta name="author" content="G8torx" />
+    <title>Cura</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=M PLUS Rounded 1c" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+
+    <!-- Favicon and Stylesheets -->
+    <link rel="shortcut icon" type="image/png" href="static/assets/easy-check.png">
+    <link rel="stylesheet" href="static/style.css">
+    <link id="theme" rel="stylesheet" href="static/light.css">
+
+    <!-- Font Awesome Icons -->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+<body class="dark-bg" onload="loadTitle(); loadTheme(); loadList(); loadPriority();">
+    <!-- Intro Section -->
+    <div class="intro">
+        <h1 class="logo-header">
+            <span class="logo">Cu</span><span class="logo">ra.</span>
+        </h1>
+    </div>
+    <header>
+        <h4>Cura.</h4>
+    </header>
+
+    <!-- Navigation and To-Do List Section -->
+    <section>
+        <button id="toggleButton" class="toggleButton" title="Switch to dark mode" onclick="toggleTheme();">Dark</button>
+        <div>
+            <div class="container">
+                <input type="text" class="title" id="title" placeholder="Title...">
+                <div id="myDIV" class="header">
+                    <input type="text" class="listInput" id="myInput" placeholder="To Do...">
+                    <div>
+                        <span target="_blank" onclick="newElement();" id="addButton" class="addBtn" style="text-decoration: none;">
+                            <i class="fa-solid fa-plus"></i>
+                        </span>
+                    </div>
+                    <div class="list">
+                        <ul id="myUL"></ul>
+                    </div>
+                </div>                      
             </div>
-        </section>
-    </body>
+        </div>
+    </section>
+
     <script src="static/scripts.js"></script>
+</body>
 </html>
