--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div>
             <div class="container">
                 <input type="text" class="title" id="title" placeholder="Title...">
+
                 <div id="myDIV" class="header">
                     <input type="text" class="listInput" id="myInput" placeholder="To Do...">
                     <div>
@@ -52,6 +53,15 @@
             </div>
         </div>
     </section>
+
+    <!-- Modal for Date Input -->
+    <div id="dateModal" class="modal">
+        <div class="modal-content">
+            <h3>Select a Due Date</h3>
+            <input type="date" id="modalDueDate">
+            <button id="confirmDateButton">Confirm</button>
+        </div>
+    </div>
 
     <script src="static/scripts.js"></script>
 </body>
