--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Assignment Tracker</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  
   <style>
     /* CSS Variables for themes */
     :root {
@@ -72,11 +71,12 @@
       font-size: 1em;
       color: var(--bg-color);
       cursor: pointer;
-      transition: background 0.3s;
+      transition: background 0.3s, box-shadow 0.3s;
       margin-left: 10px;
     }
     .theme-toggle:hover, .add-class-btn:hover {
       background: #ffdb4d;
+      box-shadow: 0 0 0 2px var(--accent-color);
     }
     
     /* Container & Box Styles */
@@ -155,15 +155,19 @@
       text-decoration: line-through;
       opacity: 0.6;
     }
-    .delete-btn, .edit-btn {
+    /* Instead of two buttons for edit and delete, we use one three-dots options button */
+    .options-btn {
       background: transparent;
       border: none;
-      font-weight: bold;
+      font-size: 1.5em;
       cursor: pointer;
       margin-left: 5px;
+      color: var(--text-color);
+      transition: box-shadow 0.3s;
     }
-    .delete-btn { color: red; }
-    .edit-btn { color: #00bfff; }
+    .options-btn:hover {
+      box-shadow: 0 0 0 2px var(--accent-color);
+    }
     
     /* Footer with smaller, cleaner buttons */
     .box-footer {
@@ -267,7 +271,7 @@
     }
   </style>
 </head>
-<body>
+<body onload="initApp()">
   <!-- Header -->
   <header>
     <h1>📅 Assignment Tracker</h1>
@@ -315,6 +319,35 @@
     </div>
   </div>
 
+  <!-- Modal for Assignment Options (Edit or Delete) -->
+  <div class="modal" id="assignmentOptionsModal">
+    <div class="modal-content">
+      <span class="close-button" onclick="closeAssignmentOptionsModal(event)">&times;</span>
+      <h2>Assignment Options</h2>
+      <div>
+        <button type="button" class="confirm-btn" onclick="openEditAssignmentModal()">Edit Assignment</button>
+        <button type="button" class="confirm-btn" onclick="openConfirmModal('Are you sure you want to delete this assignment?', function(){ classesData[currentClassIndex].assignments.splice(currentAssignmentIndex, 1); saveData(); renderClasses(); })">Delete Assignment</button>
+      </div>
+      <div>
+        <button type="button" class="cancel-btn" onclick="closeAssignmentOptionsModal(event)">Cancel</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal for Editing Assignment -->
+  <div class="modal" id="editAssignmentModal">
+    <div class="modal-content">
+      <span class="close-button" onclick="closeEditAssignmentModal(event)">&times;</span>
+      <h2>Edit Assignment</h2>
+      <input type="text" id="edit-assignment-text" placeholder="Edit assignment details..." />
+      <br />
+      <input type="date" id="edit-assignment-date" />
+      <br />
+      <button type="button" class="confirm-btn" onclick="saveEditedAssignment()">Save</button>
+      <button type="button" class="cancel-btn" onclick="closeEditAssignmentModal(event)">Cancel</button>
+    </div>
+  </div>
+
   <!-- Custom Confirmation Modal -->
   <div class="modal" id="confirmModal">
     <div class="modal-content">
@@ -332,55 +365,63 @@
   <div class="container" id="class-container"></div>
 
   <script>
-    // In-memory data only (resets on page refresh)
-    let classesData = [
-      {
-        icon: "✝️",
-        name: "Religion",
-        assignments: [
-          { text: "✝️ EdPuzzle: The Big Bang Theory", dueDate: "2024-01-17", completed: false },
-          { text: "✝️ Jesus’ Teachings Activity PDF", dueDate: "2024-01-21", completed: false },
-          { text: "✝️ Ruhani Bustamante Prison Letters", dueDate: "2024-01-28", completed: false },
-          { text: "✝️ Quiz: JMTs + Corporal Works of Mercy", dueDate: "2024-01-30", completed: false },
-          { text: "✝️ EdPuzzle: First 300 Years", dueDate: "2024-01-31", completed: false },
-          { text: "✝️ History of the Catholic Church Chapter 3", dueDate: "2024-02-09", completed: false },
-          { text: "✝️ Timeline of Early Church Fathers", dueDate: "2024-02-28", completed: false },
-          { text: "✝️ Nicene Creed EdPuzzle", dueDate: "2024-02-14", completed: false }
-        ]
-      },
-      {
-        icon: "📜",
-        name: "History",
-        assignments: [
-          { text: "📌 EdPuzzle - American Imperialism", dueDate: "2024-02-12", completed: false },
-          { text: "📌 Yellow Journalism Assignment", dueDate: "2024-02-11", completed: false },
-          { text: "📌 The Birth of an American Empire", dueDate: "2024-02-17", completed: false },
-          { text: "📌 SHE RESISTED Women’s Rights Simulation", dueDate: "2024-02-18", completed: false },
-          { text: "📌 Flint Activity (Red Summer of 1919)", dueDate: "2024-02-18", completed: false },
-          { text: "📌 WWI Over the Top Simulation", dueDate: "2024-02-25", completed: false },
-          { text: "📌 WWI Western Front Simulation", dueDate: "2024-02-25", completed: false },
-          { text: "📌 Unit 7 Study Guide", dueDate: "2024-02-28", completed: false },
-          { text: "📌 Unit #7 Test", dueDate: "2024-03-03", completed: false }
-        ]
-      }
-    ];
-    let currentClassIndex = null;  // Which class we're adding an assignment to
-    let confirmCallback = null;    // For custom confirmation modal
+    // In-memory data with local storage persistence
+    let classesData = [];
+    let currentClassIndex = null;     // Which class we're working with
+    let currentAssignmentIndex = null;  // Which assignment is selected for options/editing
+    let confirmCallback = null;         // For custom confirmation modal
 
-    // Helper: Format date (e.g., "Mon, 5/8")
-    function formatDate(dateString) {
-      const [year, month, day] = dateString.split('-');
-      const localDate = new Date(year, month - 1, day);
-      const options = { weekday: 'short', month: 'numeric', day: 'numeric' };
-      return localDate.toLocaleDateString('en-US', options);
+    // Save data to localStorage
+    function saveData() {
+      localStorage.setItem('classesData', JSON.stringify(classesData));
+      localStorage.setItem('theme', document.documentElement.classList.contains('light') ? 'light' : 'dark');
     }
 
-    // Helper: Check if a due date is overdue (end-of-day)
-    function isOverdue(dueDateValue) {
-      if (!dueDateValue) return false;
-      let dueDate = new Date(dueDateValue);
-      dueDate.setHours(23, 59, 59, 999);
-      return dueDate < new Date();
+    // Load data from localStorage (or use defaults if not present)
+    function loadData() {
+      const stored = localStorage.getItem('classesData');
+      if (stored) {
+        classesData = JSON.parse(stored);
+      } else {
+        classesData = [
+          {
+            icon: "✝️",
+            name: "Religion",
+            assignments: [
+              { text: "✝️ EdPuzzle: The Big Bang Theory", dueDate: "2024-01-17", completed: false },
+              { text: "✝️ Jesus’ Teachings Activity PDF", dueDate: "2024-01-21", completed: false },
+              { text: "✝️ Ruhani Bustamante Prison Letters", dueDate: "2024-01-28", completed: false },
+              { text: "✝️ Quiz: JMTs + Corporal Works of Mercy", dueDate: "2024-01-30", completed: false },
+              { text: "✝️ EdPuzzle: First 300 Years", dueDate: "2024-01-31", completed: false },
+              { text: "✝️ History of the Catholic Church Chapter 3", dueDate: "2024-02-09", completed: false },
+              { text: "✝️ Timeline of Early Church Fathers", dueDate: "2024-02-28", completed: false },
+              { text: "✝️ Nicene Creed EdPuzzle", dueDate: "2024-02-14", completed: false }
+            ]
+          },
+          {
+            icon: "📜",
+            name: "History",
+            assignments: [
+              { text: "📌 EdPuzzle - American Imperialism", dueDate: "2024-02-12", completed: false },
+              { text: "📌 Yellow Journalism Assignment", dueDate: "2024-02-11", completed: false },
+              { text: "📌 The Birth of an American Empire", dueDate: "2024-02-17", completed: false },
+              { text: "📌 SHE RESISTED Women’s Rights Simulation", dueDate: "2024-02-18", completed: false },
+              { text: "📌 Flint Activity (Red Summer of 1919)", dueDate: "2024-02-18", completed: false },
+              { text: "📌 WWI Over the Top Simulation", dueDate: "2024-02-25", completed: false },
+              { text: "📌 WWI Western Front Simulation", dueDate: "2024-02-25", completed: false },
+              { text: "📌 Unit 7 Study Guide", dueDate: "2024-02-28", completed: false },
+              { text: "📌 Unit #7 Test", dueDate: "2024-03-03", completed: false }
+            ]
+          }
+        ];
+        saveData();
+      }
+      const theme = localStorage.getItem('theme');
+      if (theme === 'light') {
+        document.documentElement.classList.add('light');
+      } else {
+        document.documentElement.classList.remove('light');
+      }
     }
 
     // Render all classes and assignments
@@ -410,6 +451,7 @@
           e.stopPropagation();
           openConfirmModal(`Are you sure you want to delete the ${cls.name} class?`, function() {
             classesData.splice(classIndex, 1);
+            saveData();
             renderClasses();
           });
         });
@@ -444,42 +486,24 @@
           li.addEventListener('click', function(e) {
             if (e.target.tagName !== 'BUTTON') {
               assignment.completed = !assignment.completed;
+              saveData();
               renderClasses();
             }
           });
 
-          const btnContainer = document.createElement('div');
-
-          const editBtn = document.createElement('button');
-          editBtn.type = "button";
-          editBtn.classList.add('edit-btn');
-          editBtn.textContent = "✏️";
-          editBtn.title = "Edit Assignment";
-          editBtn.addEventListener('click', function(e) {
+          // Options button (three dots)
+          const optionsBtn = document.createElement('button');
+          optionsBtn.type = "button";
+          optionsBtn.classList.add('options-btn');
+          optionsBtn.textContent = "⋮";
+          optionsBtn.title = "Assignment Options";
+          optionsBtn.addEventListener('click', function(e) {
             e.stopPropagation();
-            const newText = prompt("Edit assignment text:", assignment.text);
-            if (newText !== null) {
-              const newDate = prompt("Edit due date (YYYY-MM-DD):", assignment.dueDate || "");
-              assignment.text = newText;
-              assignment.dueDate = newDate;
-              renderClasses();
-            }
+            currentClassIndex = classIndex;
+            currentAssignmentIndex = assignmentIndex;
+            openAssignmentOptionsModal();
           });
-
-          const deleteBtn = document.createElement('button');
-          deleteBtn.type = "button";
-          deleteBtn.classList.add('delete-btn');
-          deleteBtn.textContent = "×";
-          deleteBtn.title = "Delete Assignment";
-          deleteBtn.addEventListener('click', function(e) {
-            e.stopPropagation();
-            cls.assignments.splice(assignmentIndex, 1);
-            renderClasses();
-          });
-
-          btnContainer.appendChild(editBtn);
-          btnContainer.appendChild(deleteBtn);
-          li.appendChild(btnContainer);
+          li.appendChild(optionsBtn);
           ul.appendChild(li);
         });
         box.appendChild(ul);
@@ -510,6 +534,7 @@
             if (!b.dueDate) return -1;
             return new Date(a.dueDate) - new Date(b.dueDate);
           });
+          saveData();
           renderClasses();
         });
 
@@ -520,6 +545,7 @@
         clearCompletedBtn.addEventListener('click', function(e) {
           e.stopPropagation();
           cls.assignments = cls.assignments.filter(a => !a.completed);
+          saveData();
           renderClasses();
         });
 
@@ -532,10 +558,11 @@
       });
     }
 
-    // Theme toggle (in-memory only)
+    // Theme toggle (with local storage)
     function toggleTheme(e) {
       if (e) e.preventDefault();
       document.documentElement.classList.toggle("light");
+      saveData();
     }
 
     // Class Modal Controls
@@ -558,6 +585,7 @@
           name: className,
           assignments: []
         });
+        saveData();
         renderClasses();
         closeClassModal();
         classNameInput.value = "";
@@ -582,8 +610,41 @@
           dueDate: dateInput.value || "", 
           completed: false 
         });
+        saveData();
         renderClasses();
         closeAssignmentModal();
+      }
+    }
+
+    // Assignment Options Modal Controls
+    function openAssignmentOptionsModal() {
+      document.getElementById("assignmentOptionsModal").style.display = "flex";
+    }
+    function closeAssignmentOptionsModal(e) {
+      if (e) e.preventDefault();
+      document.getElementById("assignmentOptionsModal").style.display = "none";
+    }
+    function openEditAssignmentModal() {
+      closeAssignmentOptionsModal();
+      const assignment = classesData[currentClassIndex].assignments[currentAssignmentIndex];
+      document.getElementById("edit-assignment-text").value = assignment.text;
+      document.getElementById("edit-assignment-date").value = assignment.dueDate;
+      document.getElementById("editAssignmentModal").style.display = "flex";
+    }
+    function closeEditAssignmentModal(e) {
+      if (e) e.preventDefault();
+      document.getElementById("editAssignmentModal").style.display = "none";
+    }
+    function saveEditedAssignment() {
+      const newText = document.getElementById("edit-assignment-text").value.trim();
+      const newDate = document.getElementById("edit-assignment-date").value;
+      if (newText !== "") {
+        const assignment = classesData[currentClassIndex].assignments[currentAssignmentIndex];
+        assignment.text = newText;
+        assignment.dueDate = newDate;
+        saveData();
+        renderClasses();
+        closeEditAssignmentModal();
       }
     }
 
@@ -605,8 +666,13 @@
       closeConfirmModal(null);
     }
 
-    // Render classes immediately when the script loads
-    renderClasses();
+    // Initialize app on load
+    function initApp() {
+      loadData();
+      renderClasses();
+    }
+
+    window.onload = initApp;
   </script>
 </body>
 </html>
