--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Assignment Tracker</title>
+  <title>Cura</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   
@@ -292,7 +292,7 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>📅 Assignment Tracker</h1>
+    <h1>Cura</h1>
     <div>
       <button type="button" class="theme-toggle" onclick="toggleTheme(event)">Toggle Theme</button>
       <button type="button" class="add-class-btn" onclick="openClassModal(event)">➕ Add Class</button>
