--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>Cura</h1>
-    <div>
+    <h1 style="padding-left: 30px;">Cura</h1>
+    <div style="padding-right: 30px;">
       <button type="button" class="theme-toggle" onclick="toggleTheme(event)">Toggle Theme</button>
       <button type="button" class="add-class-btn" onclick="openClassModal(event)">➕ Add Class</button>
     </div>
